# codemode

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmark_protocol.md  evidence_register.md  run_flow.md  tomorrow_run_checklist.md
src/codemode_probe/: __init__.py  artifacts.py  budget.py  calibration.py  cases.py  cli.py  code_mode_adapter.py  code_mode_config.py  costs.py  executor_factory.py  executor_ids.py  executors.py  mcp_adapter.py  mcp_client.py  model_loop.py  models.py  oracle.py  preflight.py  prompts.py  provenance.py  provider.py  provider_adapters.py  provider_config.py  reporting.py  runner.py  scoring.py  suite.py  synthetic_tools.py  workload.py
tests/: test_budget.py  test_calibration.py  test_cases.py  test_code_mode_adapter.py  test_code_mode_config.py  test_core_contracts.py  test_costs.py  test_docs_ci_contract.py  test_executor_factory.py  test_import_boundaries.py  test_mcp_adapter.py  test_mcp_client_direct.py  test_model_loop.py  test_preflight.py  test_prompts.py  test_provenance.py  test_provider.py  test_provider_adapters.py  test_provider_config.py  test_reporting_artifacts.py  test_runner_artifacts_cli.py  test_suite.py  test_synthetic_tools.py
