[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codemode-probe"
version = "0.1.0"
description = "Benchmarks for probing Code Mode orchestration over MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27.0",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
providers = [
  "anthropic>=0.74",
  "openai>=2.0",
]
code-mode = [
    "pydantic-ai-harness[code-mode]>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
